--- a/oly_frontend/package.json
+++ b/oly_frontend/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "dev": "vite serve",
     "build": "run-p type-check build-only",
-    "watch":"vite build --watch --mode development",
+    "watch":"node --max_old_space_size=16384 ./node_modules/vite/bin/vite.js build --watch --mode development",
     "preview": "vite preview --port 4173",
-    "build-only": "vite build",
+    "build-only": "node --max_old_space_size=16384 ./node_modules/vite/bin/vite.js build",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
