--- a/oly_frontend/tsconfig.json
+++ b/oly_frontend/tsconfig.json
@@ -11,6 +11,7 @@
     },
     "preserveValueImports": false, 
     "importsNotUsedAsValues": "preserve",
+    "target": "ES6",
     "module": "esnext",
     "strict": true,
     "removeComments": false,
