--- a/oly_frontend/tsconfig.json
+++ b/oly_frontend/tsconfig.json
@@ -1,6 +1,15 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "exclude": [
+    "node_modules"
+  ],
+  "lib": [
+    "esnext",
+    "dom",
+    "dom.iterable",
+    "scripthost"
+  ],
   "compilerOptions": {
     "types": [
       "node"
