--- a/oly_frontend/package.json
+++ b/oly_frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite serve",
     "build": "run-p type-check build-only",
-    "watch":"node --max_old_space_size=740 ./node_modules/vite/bin/vite.js build --watch --mode development",
+    "watch": "node --max_old_space_size=800 ./node_modules/vite/bin/vite.js build --watch --mode development",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
@@ -41,6 +41,8 @@
     "until-promise": "^0.3.0",
     "v-calendar": "^3.0.0-alpha.8",
     "vee-validate": "^4.5.8",
+    "vite-plugin-compress": "^2.1.1",
+    "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.38",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.1.5",
@@ -55,6 +57,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/fast-isnumeric": "^1.1.0",
+    "@types/js-cookie": "^2.2.7",
     "@types/locutus": "^0.0.6",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.18.2",
@@ -68,18 +71,17 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "@yzfe/svgicon-loader": "1.1.0",
-    "@types/js-cookie": "^2.2.7",
-    "stylelint": "^14.6.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-prettier": "^2.0.0",
-    "stylelint-scss": "^4.2.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "stylelint": "^14.6.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.2.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vite-plugin-svgicon": "^1.3.0",
